# PhysXToy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  classView.pu
include/: MagnumConvertUtils.h  MeshDataLoader.h  TestRigidBodyCreate.h
include/MagnumRender/: MagnumConvertUtils.h  MagnumRenderCommon.h  RenderObject.h  RenderUnit.h
include/Physics/: ColliderGeometry.h  PhysicsCommon.h  PhysicsConvexUtils.h  PhysicsEngine.h  PhysicsMaterial.h  PhysicsObject.h  PhysicsObjectAttribute.h  PhysicsPointer.h  PhysicsScene.h  PhysicsTypes.h  TestMeshGenerator.h
include/Renderer/: RenderUnit.h  Renderer.h
src/: HelloWorld.h  Render.h  TestPhysicsEngine.h  main.cpp
src/MagnumRender/: RendererImpl.cpp  RendererImpl.h
src/Physics/: ColliderGeometry.h  ConvexMeshDecomposer.h  OCLAcceleration.cpp  OCLAcceleration.h  PhysXConstructUtils.cpp  PhysXUtils.h  PhysicsConvexUtils.cpp  PhysicsConvexUtils.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineUtils.cpp  PhysicsManager.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsMaterialManager.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.h
src/Physics/Base/: PhysicsObjectPool.h
src/Physics/Utility/: PhysXUtils.h  PhysicsConvexUtils.h  PhysicsUtils.h
src/Physics/VHACD/: VHACD-ASYNC.cpp  VHACD.cpp  vhacdVHACD.h
src/Physics/VHACD/cl/: vhacdKernels.cl
src/Render/: Application.cpp  Application.h  Camera.cpp  Camera.h  DebugRender.h  DebuggRender.cpp  FrameProfiler.h  FrustumCullingManager.h  PhysicsRenderObject.h  RenderObjectAdapter.cpp  RenderObjectAdapter.h  RenderUnit.cpp  Renderer.cpp
src/snippetrender/: Camera.cpp  Camera.h  SnippetCamera.cpp  SnippetCamera.h  SnippetRender.cpp
